force-app/main/default/objects/Calculation__c/Calculation__c.object-meta.xml
<CustomObject>
    <description>Used for CST&apos;s to communicate to compliance the exact needs for a client calculation request.</description>
    <label>Calculation</label>
    <nameField>
        <displayFormat>Calculation {000000}</displayFormat>
        <label>Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>