force-app/main/default/objects/Calculation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account the Calculation is for</description>
    <inlineHelpText>Account the Calculation is for</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calculations</relationshipLabel>
    <relationshipName>Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>