force-app/main/default/objects/Calculation__c/fields/Are_there_5_Owners__c.field-meta.xml
<CustomField>
    <fullName>Are_there_5_Owners__c</fullName>
    <description>Indicate whether or not there are employees who own more than 5% of the company</description>
    <inlineHelpText>Indicate whether or not there are employees who own more than 5% of the company</inlineHelpText>
    <label>Are there 5%+ Owners?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>