force-app/main/default/objects/Calculation__c/fields/Calculation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Formula__c</fullName>
    <description>Provide calculation formula client would like us to use for the discretionary profit sharing or match calculation. Example: 2% of Compensation</description>
    <inlineHelpText>Provide calculation formula client would like us to use for the discretionary profit sharing or match calculation. Example: 2% of Compensation</inlineHelpText>
    <label>Calculation Formula</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>