force-app/main/default/objects/Calculation__c/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <description>Please select all contribution sources that the client has requested a calculation for</description>
    <inlineHelpText>Please select all contribution sources that the client has requested a calculation for</inlineHelpText>
    <label>Calculation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employer Match (Non Safe Harbor)</fullName>
            </value>
            <value>
                <fullName>Profit Sharing</fullName>
            </value>
            <value>
                <fullName>Safe Harbor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>