force-app/main/default/objects/Calculation__c/fields/Calculations__c.field-meta.xml
<CustomField>
    <fullName>Calculations__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>