force-app/main/default/objects/Calculation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case that Calculation was originally created from.</description>
    <inlineHelpText>Case that Calculation was originally created from.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Calculations</relationshipLabel>
    <relationshipName>Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>