force-app/main/default/objects/Calculation__c/fields/Census__c.field-meta.xml
<CustomField>
    <fullName>Census__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the census attached to this object? Compliance cannot proceed until this occurs.</description>
    <inlineHelpText>Is the census attached to this object? Compliance cannot proceed until this occurs.</inlineHelpText>
    <label>Census</label>
    <type>Checkbox</type>
</CustomField>