force-app/main/default/objects/Calculation__c/fields/Company_Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Entity_Type__c</fullName>
    <description>Please confirm the company entity type with client as this can directly effect the compensation used to calculation the contribution</description>
    <inlineHelpText>Please confirm the company entity type with client as this can directly effect the compensation used to calculation the contribution</inlineHelpText>
    <label>Company Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C-Corp</fullName>
            </value>
            <value>
                <fullName>S-Corp</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>LLC taxed as Corp</fullName>
            </value>
            <value>
                <fullName>LLC taxed as Partnership</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>