force-app/main/default/objects/Calculation__c/fields/Contribution_Budget__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Budget__c</fullName>
    <description>If applicable please provide client&apos;s contribution budget. Example: Maximize owners or contribute $25,000 total</description>
    <inlineHelpText>If applicable please provide client&apos;s contribution budget. Example: Maximize owners or contribute $25,000 total</inlineHelpText>
    <label>Contribution Budget</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>