force-app/main/default/objects/Calculation__c/fields/Conv_Safe_Harbor_Eligibility_Details__c.field-meta.xml
<CustomField>
    <fullName>Conv_Safe_Harbor_Eligibility_Details__c</fullName>
    <description>Safe Harbor and/or Eligibility details for Conversion Plans</description>
    <inlineHelpText>Safe Harbor and/or Eligibility details for Conversion Plans</inlineHelpText>
    <label>Conv Safe Harbor| Eligibility Details</label>
    <type>TextArea</type>
</CustomField>