force-app/main/default/objects/Calculation__c/fields/Date_Needed__c.field-meta.xml
<CustomField>
    <fullName>Date_Needed__c</fullName>
    <description>Date calculation is due by</description>
    <inlineHelpText>Date calculation is due by</inlineHelpText>
    <label>Date Needed</label>
    <type>Date</type>
</CustomField>