force-app/main/default/objects/Calculation__c/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <description>Plan Eligibility</description>
    <inlineHelpText>Plan Eligibility</inlineHelpText>
    <label>Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>One Month</fullName>
            </value>
            <value>
                <fullName>Two Months</fullName>
            </value>
            <value>
                <fullName>Three Months</fullName>
            </value>
            <value>
                <fullName>Six Months</fullName>
            </value>
            <value>
                <fullName>One Year</fullName>
            </value>
            <value>
                <fullName>One Year (1000 hours)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>