force-app/main/default/objects/Calculation__c/fields/Has_the_client_requested_a_special__c.field-meta.xml
<CustomField>
    <fullName>Has_the_client_requested_a_special__c</fullName>
    <description>Has the client given us a formula that they would like to be used to calculate their discretionary profit sharing or match contribution?</description>
    <inlineHelpText>Has the client given us a formula that they would like to be used to calculate their discretionary profit sharing or match contribution?</inlineHelpText>
    <label>Special Calculation Formula?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>