force-app/main/default/objects/Calculation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Calculation Notes - Editable by Compliance Only</description>
    <inlineHelpText>Calculation Notes - Editable by Compliance Only</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>