force-app/main/default/objects/Calculation__c/fields/Number_of_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calculations__c</fullName>
    <description>Number of unique calculations per calc object</description>
    <inlineHelpText>Number of unique calculations per calc object</inlineHelpText>
    <label>Number of Calculations</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>