force-app/main/default/objects/Calculation__c/fields/Other_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Calculation_Type__c</fullName>
    <label>Other Calculation Type</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>