force-app/main/default/objects/Calculation__c/fields/Owners__c.field-meta.xml
<CustomField>
    <fullName>Owners__c</fullName>
    <description>Please indicate how the owners compensation is reported as this can directly effect the compensation amount used to calculation the contribution</description>
    <inlineHelpText>Please indicate how the owners compensation is reported as this can directly effect the compensation amount used to calculation the contribution</inlineHelpText>
    <label>Owners&apos; Compensation Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K-1</fullName>
            </value>
            <value>
                <fullName>Schedule C</fullName>
            </value>
            <value>
                <fullName>W-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>