force-app/main/default/objects/Calculation__c/fields/Owners_through_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Owners_through_Attribution__c</fullName>
    <description>Indicate whether or not there are employees who are the grandparents, parents, spouse or children of the more than 5% owners</description>
    <inlineHelpText>Indicate whether or not there are employees who are the grandparents, parents, spouse or children of the more than 5% owners</inlineHelpText>
    <label>Owners through Attribution?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>