force-app/main/default/objects/Calculation__c/fields/Owners_through_Attribution_on_Census__c.field-meta.xml
<CustomField>
    <fullName>Owners_through_Attribution_on_Census__c</fullName>
    <description>Please review the census provided to ensure the owners through attribution have been identified</description>
    <inlineHelpText>Please review the census provided to ensure the owners through attribution have been identified</inlineHelpText>
    <label>Owners through Attribution ID&apos;d Census?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>