force-app/main/default/objects/Calculation__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan that calculation is related to.</description>
    <inlineHelpText>Plan that calculation is related to.</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Calculations</relationshipLabel>
    <relationshipName>Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>