force-app/main/default/objects/Calculation__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <description>Confirm New or Conversion</description>
    <inlineHelpText>Confirm New or Conversion</inlineHelpText>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Plan</fullName>
            </value>
            <value>
                <fullName>Conversion Plan</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>