force-app/main/default/objects/Calculation__c/fields/Plan_Year_Request__c.field-meta.xml
<CustomField>
    <fullName>Plan_Year_Request__c</fullName>
    <description>Please indicate the plan year the contribution calculation request applies to.</description>
    <inlineHelpText>Please indicate the plan year the contribution calculation request applies to</inlineHelpText>
    <label>Plan Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>