force-app/main/default/objects/Calculation__c/fields/RPC_Box_Link__c.field-meta.xml
<CustomField>
    <fullName>RPC_Box_Link__c</fullName>
    <description>Box link for Compliance to deliver calculation requests to</description>
    <inlineHelpText>Box link for Compliance to deliver calculation requests to</inlineHelpText>
    <label>RPC Box Link</label>
    <type>Url</type>
</CustomField>