force-app/main/default/objects/Calculation__c/fields/Service_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Option__c</fullName>
    <description>Service Option for Calculation</description>
    <inlineHelpText>Service Option for Calculation</inlineHelpText>
    <label>Service Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saver(k)</fullName>
            </value>
            <value>
                <fullName>Custom(k)</fullName>
            </value>
            <value>
                <fullName>Reserve(k)</fullName>
            </value>
            <value>
                <fullName>RK Only</fullName>
            </value>
            <value>
                <fullName>Simply Retirement</fullName>
            </value>
            <value>
                <fullName>Simply Retirement TPA</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
            <value>
                <fullName>Single(k) Plus</fullName>
            </value>
            <value>
                <fullName>Single IRA</fullName>
            </value>
            <value>
                <fullName>Express IRA</fullName>
            </value>
            <value>
                <fullName>Mega Roth Single(k)</fullName>
            </value>
            <value>
                <fullName>Single(k) to Custom(k)</fullName>
            </value>
            <value>
                <fullName>Legacy Saver(k)</fullName>
            </value>
            <value>
                <fullName>Express(k)</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Bundled</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Unbundled</fullName>
            </value>
            <value>
                <fullName>Simply Retirement Single(k) Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>