force-app/main/default/objects/Calculation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Opened = Gathering data for calc
 
Requested = all data gathered and sent to Compliance

Completed = Compliance finished calculation

Delivered = CST delivered calculation back to client</description>
    <inlineHelpText>Opened = Gathering data for calc
 
Requested = all data gathered and sent to Compliance

Completed = Compliance finished calculation

Delivered = CST delivered calculation back to client</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opened</fullName>
                <default>true</default>
                <label>Opened</label>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>