force-app/main/default/objects/Calculation__c/fields/Top_Heavy__c.field-meta.xml
<CustomField>
    <fullName>Top_Heavy__c</fullName>
    <description>Completed by Compliance -</description>
    <inlineHelpText>Completed by Compliance -</inlineHelpText>
    <label>Top Heavy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>