force-app/main/default/objects/Calculation__c/fields/Verified_Census__c.field-meta.xml
<CustomField>
    <fullName>Verified_Census__c</fullName>
    <description>Please make sure that the client has either provided a census in our upload format or has confirmed the information in the Employee Demographic report</description>
    <inlineHelpText>Please make sure that the client has either provided a census in our upload format or has confirmed the information in the Employee Demographic report</inlineHelpText>
    <label>Verified Census</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client census has been attached in UBQT format</fullName>
            </value>
            <value>
                <fullName>Client Confirmed Employee Demographic Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>