force-app/main/default/objects/Calculation__c/fields/X5_Owners_On_Census__c.field-meta.xml
<CustomField>
    <fullName>X5_Owners_On_Census__c</fullName>
    <description>Please review the census provided to ensure the 5%+ owners have been identified</description>
    <inlineHelpText>Please review the census provided to ensure the 5%+ owners have been identified</inlineHelpText>
    <label>5% owners ID&apos;d on census?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>