force-app/main/default/objects/Calculation__c/recordTypes/Calculation.recordType-meta.xml
<RecordType>
    <fullName>Calculation</fullName>
    <active>true</active>
    <description>Used for Client Support on Existing Plans</description>
    <label>Calculation</label>
</RecordType>