force-app/main/default/objects/Calculation__c/recordTypes/Sales_Calculation.recordType-meta.xml
<RecordType>
    <fullName>Sales_Calculation</fullName>
    <active>true</active>
    <description>Calculation request from Sales Team</description>
    <label>Sales Calculation</label>
</RecordType>