force-app/main/default/objects/Calculation__c/validationRules/Calculation_Delivered_to_Close_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Calculation_Delivered_to_Close_Parent</fullName>
    <active>true</active>
    <description>Calculation must be in &apos;Delivered&apos; status in order for the Parent Case it&apos;s tied to to be closed</description>
    <errorConditionFormula>NOT(ISPICKVAL( Status__c , &quot;Delivered&quot;))
&amp;&amp;
NOT(ISPICKVAL(PRIORVALUE( Status__c) , &quot;Delivered&quot;))
&amp;&amp;
ISPICKVAL( Case__r.Status , &quot;Resolved&quot;)</errorConditionFormula>
    <errorMessage>This case cannot be resolved until the Calculation Object is set to &apos;Delivered&apos; by Compliance</errorMessage>
</ValidationRule>