force-app/main/default/objects/Calculation__c/validationRules/ID_5_Owners_on_Census.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_5_Owners_on_Census</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Requested&quot;)
&amp;&amp;
ISPICKVAL( Are_there_5_Owners__c , &quot;YES&quot;)
&amp;&amp;
ISPICKVAL( X5_Owners_On_Census__c , &quot;NO&quot;)</errorConditionFormula>
    <errorDisplayField>X5_Owners_On_Census__c</errorDisplayField>
    <errorMessage>All 5% Owners Must Be Identified On Census Before Submitting To Compliance</errorMessage>
</ValidationRule>