force-app/main/default/objects/Calculation__c/validationRules/ID_Attribution_Owners_on_Census.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_Attribution_Owners_on_Census</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Requested&quot;)
&amp;&amp;
ISPICKVAL(  Owners_through_Attribution__c  , &quot;YES&quot;)
&amp;&amp;
ISPICKVAL(  Owners_through_Attribution_on_Census__c , &quot;NO&quot;)</errorConditionFormula>
    <errorDisplayField>Owners_through_Attribution_on_Census__c</errorDisplayField>
    <errorMessage>All Owners Through Attribution Must Be Identified On Census Before Submitting To Compliance</errorMessage>
</ValidationRule>