force-app/main/default/objects/Calculation__c/validationRules/Other_Calc_Type_Missing.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Calc_Type_Missing</fullName>
    <active>true</active>
    <description>If &quot;Other&quot; selected on Calculation Type, must enter Other description</description>
    <errorConditionFormula>AND
(INCLUDES( Calculation_Type__c , &quot;Other&quot;), 

 ISBLANK( Other_Calculation_Type__c ))</errorConditionFormula>
    <errorDisplayField>Other_Calculation_Type__c</errorDisplayField>
    <errorMessage>Confirm &quot;Other&quot; Calculation type</errorMessage>
</ValidationRule>