force-app/main/default/objects/Calculation__c/validationRules/Status_Requested_Missing_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Requested_Missing_Data</fullName>
    <active>true</active>
    <description>Prevents Compliance Child Case from being created if data is missing</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Requested&quot;)
&amp;&amp;
 RecordTypeId = &quot;0121G000000RlLiQAK&quot;
&amp;&amp;
 ( Calculation_Formula__c = &quot;&quot;
||
 ISPICKVAL( Are_there_5_Owners__c , &quot;&quot;)
||
 ISPICKVAL( X5_Owners_On_Census__c , &quot;&quot;)
||
 ISPICKVAL( Owners_through_Attribution__c , &quot;&quot;)
||
 ISPICKVAL( Owners_through_Attribution_on_Census__c , &quot;&quot;)
||
  ISPICKVAL( Has_the_client_requested_a_special__c  , &quot;&quot;) 
||
 ISBLANK( Calculation_Type__c ) = TRUE
|| 
 Census__c = False
|| 
 ISPICKVAL(Company_Entity_Type__c, &quot;&quot;) 
|| 
 Contribution_Budget__c = &quot;&quot;
|| 
 ISPICKVAL(Owners__c, &quot;&quot;)
|| 
 Plan_Year_Request__c = &quot;&quot;
|| 
 ISPICKVAL(Verified_Census__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage>Please ensure there are no blank entries on the Calculation Object. Compliance is unable to process calculations unless all fields are completed.</errorMessage>
</ValidationRule>