force-app/main/default/objects/Calculation__c/validationRules/Year_Must_Be_4_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_Must_Be_4_Digits</fullName>
    <active>true</active>
    <description>Please input 4 digit year</description>
    <errorConditionFormula>LEN( Plan_Year_Request__c )  &lt;&gt; 4</errorConditionFormula>
    <errorDisplayField>Plan_Year_Request__c</errorDisplayField>
    <errorMessage>Please input 4 digit year</errorMessage>
</ValidationRule>